Fix label letter alignemnts

--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -17,7 +17,7 @@ body {
     overflow-x: hidden;
     font-family: $f-fam-title;
     max-width: $w-page-max;
-    height: 380vh;
+    height: 480vh;
     padding: $w-page-pad;
     margin: 0 auto;
     
